# Aubonmeeple

./: .env.dist  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.txt  docker-compose.yml  init-schema.docker.sql  scrapy.sql
boardgame_finder/: Cargo.toml  TODO.txt
boardgame_finder/src/website/: agorajeux.rs  knapix.rs  mod.rs
css/: style.css
helpers/: deploy.sh  rename_image.sh  rename_image.sql
src/: crawler.rs  db.rs  game.rs  gamechecker.rs  httpclient.rs  lib.rs  main.rs  metrics.rs  server.rs
src/frontend/: filter.rs  footer.rs  frontpage.rs  mod.rs  pagination.rs  server.rs  sort.rs
src/frontlib/: filter.rs  footer.rs  frontpage.rs  header.rs  mod.rs  server.rs
src/website/: agorajeux.rs  bgg.rs  helper.rs  knapix.rs  ludifolie.rs  ludocortex.rs  mod.rs  okkazeo.rs  philibert.rs  trictrac.rs  ultrajeux.rs
system/etc/logrotate.d/: aubonmeeple
system/etc/systemd/user/: aubonmeeple_backend.Service  aubonmeeple_frontend.Service
templates/: frontpage.html  frontpage.tera
tests/agorajeux/: test1.html  test2.html  test3.html  test4.html
tests/bgg/: test1.html  test2.html  test3.html  test4.html  test5.html  test6.html
