[package]
name = "boardgame_finder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/bin/backend/main.rs"

[[bin]]
name = "frontend"
path = "src/bin/frontend/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feed-rs = "1.3.0"
reqwest = "*"
rss = "2.0.4"
regex = "*"
tokio =  {version = "1.28.2", features = ["full", "tracing"]}
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
scraper = "0.17.1"
chrono = {version = "0.4.26", features = ["serde"] }
axum = {version = "0.6.20", features = ["form"] }
env_logger = "0.10.0"
log = "0.4.20"
log-panics = { version = "2.1.0", features = ["with-backtrace"]}
image = "0.24.7"
tower-http = { version = "0.4.0", features = ["fs"] }
tokio-postgres = { version = "0.7.9", features = ["with-chrono-0_4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
console-subscriber = "0.1.5"
tera = { version = "1.19.1", features = ["builtins"] }

